fix - Fixing a testimonialsCard styles on mobile and tablet

--- a/src/components/servicesListItem/style.css
+++ b/src/components/servicesListItem/style.css
@@ -153,7 +153,7 @@
   }
 
   .services__item.services__expanded .services__description {
-    max-width: 230px;
+    max-width: 255px;
   }
 }
 
