--- a/src/components/testimonialCard/style.css
+++ b/src/components/testimonialCard/style.css
@@ -56,21 +56,27 @@
 }
 
 .testimonial-card__name {
+  margin-bottom: 0.5rem;
   font-size: 1.6rem;
   font-weight: 700;
-  margin-bottom: 0.5rem;
+  text-align: center;
   color: var(--color-blue-700);
 }
 
 .testimonial-card__profession {
+  display: inline-block;
   font-size: 1.4rem;
   color: var(--color-blue-700);
 }
 
 @media screen and (max-width: 1024px) {
-  .testimonial-card {
-    border: none;
+  .testimonials__carousel {
     box-shadow: 0px 0px 8px 0px #00000026;
+  }
+
+  .testimonial-card {
+    margin: 0;
+    border: none;
   }
 
   .testimonial-card__quote--top {
@@ -97,3 +103,9 @@
     height: 6rem;
   }
 }
+
+/* @media screen and (max-width: 375px) {
+  .testimonial-card__profession {
+    max-width: 128px;
+  }
+} */
